# automation_exercise_playwright

./: .gitignore  Dockerfile  README.md  docker-compose.yml  folder_structure.txt  invoice.txt  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: playwright.yml
api_clients/: base_client.py  product_client.py  user_client.py
download/: invoice.txt
pages/: account_deleted_page.py  auth_page.py  base_page.py  cart_page.py  checkout_page.py  contact_page.py  payment_page.py  payment_successful_page.py  product_details_page.py  products_page.py  test_cases_page.py
pages/components/: brands_section.py  category_section.py  login_section.py  navigation_module.py  signup_section.py  subscription_section.py
project/data/: test_data.py
project/download/: invoice.txt
project/downloads/: invoice.txt
project/pages/: account_created_page.py  account_deleted_page.py  auth_page.py  base_page.py  cart_page.py  checkout_page.py  contact_page.py  home_page.py  payment_page.py  payment_successful_page.py  product_details_page.py  products_page.py  test_cases_page.py
project/tests/: conftest.py
test-results/: report.html  report.md
tests/: conftest.py
tests/tests_API/: test_API_01_GET_all_productsList.py  test_API_03_GET_brandsList.py  test_API_05_valid_POST_searchProduct.py  test_API_07_valid_POST_verifyLogin.py  test_API_09_DELETE_verifyLogin.py  test_API_10_invalid_POST_verifyLogin.py  test_API_11_CRUD_user.py
tests/tests_ui/: test_case_01_register.py  test_case_02_login_valid_data.py  test_case_03_login_invalid_data.py  (+23 more)
(+39 files in other folders)
