[project]
name = "automation-exercise-playwright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=40.1.2",
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-check>=2.6.2",
    "pytest-faker>=2.0.0",
    "pytest-playwright>=0.7.2",
]
